$Id$

2009-06-03 Harald Kipp

* Fixed:

TWI routines failed on AT91 targets. Fixed by Ulrich Prinz.

VS1053 now working with again out of the box with the old VS10XX driver, 
hopefully.

* Changed:

More targets supported with 'make burn' while using SAM-BA.

* Added:

New line editor with key mapping and history support.

Several enhancements to Lua scripting. All standard libraries are now 
available. I/O library supports TCP connect and accept. Lua default
libraries are selectable and configurable to use integers instead of
floating point. Lua stand-alone interpreter added, which even runs on 
8-bit targets, possibly the first one in the world.



2009-04-09 Harald Kipp

* Fixed:

Added HW_EFC_AT91 config provision to AT91 members with embedded flash 
controller.

* Changed:

Starting a new ChangeLog. What do you think about it?

Provision HW_NVMEM renamed to DEV_NVMEM, because the driver, not the
hardware supports this.

Moved all non-volatile memory options to the to the target independant 
driver.

* Added:

Support for Ethernut 3.1, including SPI bus controller based on Nut 
Programmable Logic.

More detailed documentation to the non-volatile memory parts in the
configuration scripts.


2009-04-03  Ole Reinhardt <ole.reinhardt@thermotemp.de>

        * at91_twi.c: Fixed bugs reported by Harald and Ajit. Thanks!


2009-03-27  Thiago A. Correa <thiago.correa@gmail.com>

        * Mark documented deprecated functions with NUT_DEPRECATE.
          This will cause warnings during compilation if deprecated functions
          are used in user code.
